update logic of case request
